update to scalajs-react 0.9.0

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 <!-- Include Scala.js compiled code -->
 <script type="text/javascript" src="js/reactjs-scalajs-opt.js"></script>
 <!-- Run JSApp -->
- <script>chandu0101.scalajsreact.ReactApp().main()</script>
+<script type="text/javascript" src="js/reactjs-scalajs-launcher.js"></script>
 </body>
 </html>
